Altered intro text a bit, and stopped line wrapping mid-name

--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -24,8 +24,13 @@
   font-size: 3em;
 }
 
+.avoid-wrap {
+  display: inline-block;
+}
+
 .intro-para {
   font-size: 1.25em;
+  padding-bottom: 50px;
 }
 
 .hero-content {
